--- a/example.html
+++ b/example.html
@@ -1,9 +1,8 @@
-﻿ 
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
    <meta charset="utf-8">
-   <title>Приклад найпростішого скрипта</title>
+   <title>Приклад найпростішого скрипта 1</title>
    <script type="text/javascript" src="example.js">   </script>
   </head>
 <body>
