--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <meta charset="utf-8">
-   <title>Приклад найпростішого скрипта 1</title>
+   <title>Приклад найпростішого скрипта 1 gtehtet </title>
    <script type="text/javascript" src="example.js">   </script>
   </head>
 <body>
